Closed
Bug 1416782
Opened 8 years ago
Closed 8 years ago
Crash in RtlEnterCriticalSection | mozilla::layers::PaintThread::AsyncPrepareBuffer
Categories
(Core :: Graphics, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox57 | --- | unaffected |
| firefox58 | --- | fixed |
| firefox59 | --- | fixed |
People
(Reporter: marcia, Assigned: rhunt)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
1.05 KB,
patch
|
dvander
:
review+
gchang
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-4ad2b659-b027-4ee7-90a0-3f3260171112.
=============================================================
Seen while looking at nightly crash stats - this crash started using 20171111100349: http://bit.ly/2zAmbXg.
Possible regression ranged based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=864174ac0707207f7fc698ed6c3c47c043e99395&tochange=8e788d9983b80c7cf6ed021f1536dd8a97941674
Bug 1399692? ni on :rhunt since he touched code in this area
Top 10 frames of crashing thread:
0 ntdll.dll RtlEnterCriticalSection
1 xul.dll mozilla::layers::PaintThread::AsyncPrepareBuffer gfx/layers/PaintThread.cpp:260
2 xul.dll mozilla::detail::RunnableFunction<<lambda_fc57ee2b668bfe8afc9d03a6cee1a939> >::Run xpcom/threads/nsThreadUtils.h:529
3 xul.dll mozilla::SyncRunnable::Run xpcom/threads/SyncRunnable.h:112
4 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1037
5 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:513
6 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:364
7 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:319
8 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:299
9 xul.dll nsThread::ThreadFunc xpcom/threads/nsThread.cpp:425
=============================================================
Flags: needinfo?(rhunt)
| Assignee | ||
Comment 1•8 years ago
|
||
Somehow it looks like sync omtp is enabled for this user. When this happens, cbc will be nullptr. AsyncPaintContents will check this before calling cbc->NotifyFinishedAsyncPaint. We should do the same for AsyncPrepareBuffer.
Attachment #8927898 -
Flags: review?(dvander) → review+
Updated•8 years ago
|
status-firefox57:
--- → unaffected
Priority: -- → P1
Pushed by rhunt@eqrion.net:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2e6eb350eb75
Don't use CompositorBridgeChild in PrepareBuffer if sync OMTP is enabled (bug 1416782, r=dvander)
Comment 3•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox59:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Comment 4•8 years ago
|
||
Please nominate this for Beta approval.
status-firefox-esr52:
--- → unaffected
Flags: needinfo?(rhunt)
| Assignee | ||
Comment 5•8 years ago
|
||
Comment on attachment 8927898 [details] [diff] [review]
pt-sync-prepare.patch
Approval Request Comment
[Feature/Bug causing the regression]: Users enabling an OMTP preference meant for development would cause a crash from a new feature that wasn't tested with the development pref enabled.
[User impact if declined]: Users enabling this development pref will crash
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: Just a null pointer check
[String changes made/needed]:
Flags: needinfo?(rhunt)
Attachment #8927898 -
Flags: approval-mozilla-beta?
Comment 6•8 years ago
|
||
Comment on attachment 8927898 [details] [diff] [review]
pt-sync-prepare.patch
Fix a crash. Beta58+.
Attachment #8927898 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•8 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•