Don't use CompositorBridgeChild in PrepareBuffer if sync OMTP is enabled (bug 1416782, r=dvander)

MozReview-Commit-ID: DMbKcDEkkeP

--HG--
extra : rebase_source : 20608d09f18549816b10fd63d0879cfb409e8219